src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__tests__detect_type_phoenix.snap
---
source: src/gpu_handle/overdrive/mod.rs
expression: table
---
kind: rdna
data:
  current_sclk_range:
    min: 800
    max: 2700
  sclk_offset: ~
  rdna4_sclk_offset_workaround: false
  current_mclk_range:
    min: ~
    max: ~
  vddc_curve: []
  voltage_offset: ~
  od_range:
    sclk:
      min: 800
      max: 2700
    sclk_offset: ~
    mclk: ~
    curve_sclk_points: []
    curve_voltage_points: []
    voltage_offset: ~
